cabal-version:      2.4
name:               cardano-options
version:            0.1.0.0

synopsis: A distributed Cardano P2P Options dApp PoC.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

library
  import: lang
  exposed-modules: CardanoOptions
  build-depends:
    plutus-ledger,
    plutus-ledger-api,
    plutus-core,
    plutus-tx-plugin,
    plutus-tx,
    plutus-script-utils,
    cardano-api,
    bytestring,
    serialise,
    aeson,
    plutonomy,
    text
  hs-source-dirs: src
  ghc-options: 
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

test-suite cardano-options-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-unused-local-binds -Wno-unused-matches
  other-modules:
      Test.AcceptContract
    , Test.CloseAssetsUTxO
    , Test.CloseExpiredContract
    , Test.CloseProposalUTxO
    , Test.Common
    , Test.CreateAssetsUTxO
    , Test.ExecuteContract
    , Test.ProposeContracts
  build-depends:
    cardano-options,
    cardano-api,
    plutus-contract,
    plutus-tx,
    plutus-ledger-api,
    plutus-ledger,
    plutus-ledger-constraints,
    plutus-tx-plugin,
    aeson,
    plutus-script-utils,
    text,
    playground-common,
    containers,
    data-default,
    tasty,
    lens,
    tasty-hunit,
    plutus-core

executable cardano-options
    import: lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        CLI.Types
      , CLI.Parsers
      , CLI.Run
      , CLI.BlockfrostApi
      , CLI.Query
    build-depends:    
      cardano-options,
      optparse-applicative,
      servant,
      aeson,
      servant-client,
      http-client,
      http-client-tls,
      text,
      containers,
      vector,
      aeson-pretty,
      bytestring,
      utf8-string,
      cardano-addresses,
      text
    ghc-options: -O2
    hs-source-dirs:   app
    default-language: Haskell2010
