cabal-version:      2.4
name:               cardano-options
version:            0.1.0.0

synopsis: A distributed Cardano P2P Options dApp PoC.
license: Apache-2.0
author: fallen-icarus
maintainer: modern.daidalos+git@gmail.com
copyright: 2023 fallen-icarus
extra-source-files: CHANGELOG.md

common lang
  build-depends: base ^>=4.14
  default-language: Haskell2010
  ghc-options: -Wall -Wredundant-constraints

common plutus-internals
  build-depends:
    cardano-api,
    plutus-ledger,
    plutus-ledger-api,
    plutus-tx,
    plutus-tx-plugin,
    plutus-script-utils,
    plutus-core,
    cardano-node-emulator

library
  import: 
    lang,
    plutus-internals
  exposed-modules: CardanoOptions
  build-depends:
    bytestring,
    serialise,
    aeson,
    plutonomy,
    text
  hs-source-dirs: src
  ghc-options: 
    -fobject-code 
    -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas 
    -fno-specialise

test-suite cardano-options-tests
  import: 
    lang,
    plutus-internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wno-unused-local-binds -Wno-unused-matches -Wno-deprecations
  other-modules:
      Test.AcceptContract
    , Test.CloseAssetsUTxO
    , Test.CloseExpiredContract
    , Test.CloseProposalUTxO
    , Test.Common
    , Test.CreateAssetsUTxO
    , Test.ExecuteContract
    , Test.ProposeContracts
    , Test.UpdateAddress
  build-depends:
    cardano-options,
    plutus-contract,
    plutus-tx-constraints,
    aeson,
    text,
    containers,
    data-default,
    tasty,
    lens,
    tasty-hunit,

executable cardano-options
    import: lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        CLI.Types
      , CLI.Parsers
      , CLI.Run
      , CLI.BlockfrostApi
      , CLI.Query
    build-depends:    
      cardano-options,
      optparse-applicative,
      servant,
      aeson,
      servant-client,
      http-client,
      http-client-tls,
      text,
      containers,
      vector,
      aeson-pretty,
      bytestring,
      utf8-string,
      cardano-addresses,
      text
    ghc-options: -O2
    hs-source-dirs:   app
    default-language: Haskell2010
